Fix layout issues in mobile (#4) (#5)
* Fix navbar issues

* Fix mobile view issues in home screen

* Fix footer layout issues in mobile

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -39,6 +39,9 @@ header#main-navigation {
   button.navbar-toggler {
     padding: 0;
   }
+  button.navbar-toggler {
+    padding: 0;
+  }
 }
 body.background_image #main-navigation {
   background-color: rgba(0, 0, 0, 0.75);
